--- a/index.html
+++ b/index.html
@@ -95,62 +95,80 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u8" class="ax_default label">
+      <!-- Unnamed (Image) -->
+      <div id="u8" class="ax_default image">
         <img id="u8_img" class="img " src="images/index/u8.png"/>
         <!-- Unnamed () -->
-        <div id="u9" class="text" style="visibility: visible;">
-          <p><span>存钱罐</span></p>
+        <div id="u9" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
         </div>
       </div>
 
-      <!-- 钱币 (Image) -->
-      <div id="u10" class="ax_default image ax_default_hidden" data-label="钱币" style="display: none; visibility: hidden">
-        <img id="u10_img" class="img " src="images/index/钱币_u10.png"/>
+      <!-- 钱币1 (Image) -->
+      <div id="u10" class="ax_default image ax_default_hidden" data-label="钱币1" style="display: none; visibility: hidden">
+        <img id="u10_img" class="img " src="images/index/钱币1_u10.png"/>
         <!-- Unnamed () -->
         <div id="u11" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u12" class="ax_default image">
-        <img id="u12_img" class="img " src="images/index/u12.png"/>
-        <!-- Unnamed () -->
-        <div id="u13" class="text" style="display: none; visibility: hidden">
-          <p><span></span></p>
-        </div>
-      </div>
-
       <!-- 金币计数 (Rectangle) -->
-      <div id="u14" class="ax_default label" data-label="金币计数">
-        <div id="u14_div" class=""></div>
+      <div id="u12" class="ax_default label" data-label="金币计数">
+        <div id="u12_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u15" class="text" style="visibility: visible;">
+        <div id="u13" class="text" style="visibility: visible;">
           <p><span>0</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u16" class="ax_default image">
-        <img id="u16_img" class="img " src="images/index/u16.png"/>
+      <div id="u14" class="ax_default image">
+        <img id="u14_img" class="img " src="images/index/u14.png"/>
         <!-- Unnamed () -->
-        <div id="u17" class="text" style="display: none; visibility: hidden">
+        <div id="u15" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- +1 (Rectangle) -->
-      <div id="u18" class="ax_default label ax_default_hidden" data-label="+1" style="display: none; visibility: hidden">
-        <div id="u18_div" class=""></div>
+      <div id="u16" class="ax_default label ax_default_hidden" data-label="+1" style="display: none; visibility: hidden">
+        <div id="u16_div" class=""></div>
         <!-- Unnamed () -->
-        <div id="u19" class="text" style="visibility: visible;">
+        <div id="u17" class="text" style="visibility: visible;">
           <p><span>+1</span></p>
         </div>
       </div>
 
+      <!-- 钱币2 (Image) -->
+      <div id="u18" class="ax_default image ax_default_hidden" data-label="钱币2" style="display: none; visibility: hidden">
+        <img id="u18_img" class="img " src="images/index/钱币1_u10.png"/>
+        <!-- Unnamed () -->
+        <div id="u19" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- 钱币3 (Image) -->
+      <div id="u20" class="ax_default image ax_default_hidden" data-label="钱币3" style="display: none; visibility: hidden">
+        <img id="u20_img" class="img " src="images/index/钱币1_u10.png"/>
+        <!-- Unnamed () -->
+        <div id="u21" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u22" class="ax_default image">
+        <img id="u22_img" class="img " src="images/index/u22.png"/>
+        <!-- Unnamed () -->
+        <div id="u23" class="text" style="display: none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Hot Spot) -->
-      <div id="u20" class="ax_default">
+      <div id="u24" class="ax_default">
       </div>
     </div>
   </body>
